test: fix testing context errors